<resources>
    <string name="app_name">Zipcode</string>

    <string name="person_details_cpf">CPF</string>
    <string name="person_details_name">Nome</string>
    <string name="person_details_birthDate">Data de nascimento</string>
    <string name="person_details_photo">Foto</string>
    <string name="image_import_error">Erro ao obter a imagem</string>
    <string name="image_import_select_image">Nenhuma imagem foi selecionada</string>
    <string name="image_import_required">Você precisa escolher uma foto</string>

    <string name="required">Requerido</string>
    <string name="cpf_invalid">CPF inválido</string>
    <string name="date_invalid">Data inválida</string>
    <string name="people_empty_list">Nenhuma pessoa cadastrada</string>
    <string name="person_remove_error">Erro ao tentar remover a pessoa</string>
    <string name="person_new">Nova pessoa</string>
    <string name="person_edit">Editar pessoa</string>
    <string name="address_zipcode">Cep</string>
    <string name="address">Endereço</string>
    <string name="address_number">Número</string>
    <string name="addresses">Endereços</string>
    <string name="action_add_remove">Adicionar|Remover</string>
    <string name="address_search_error">Erro ao buscar o endereço pelo cep</string>
    <string name="action_add">Adicionar</string>
</resources>
