<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:layout_marginBottom="20dp"
    tools:context=".ui.persondetails.PersonDetailsFragment">

    <LinearLayout
        android:id="@+id/layout_person_details_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/photo_size">

                <ImageButton
                    android:id="@+id/person_details_photo"
                    android:layout_width="@dimen/photo_size"
                    android:layout_height="@dimen/photo_size"
                    android:background="@drawable/ic_account_circle_black"
                    android:contentDescription="@string/person_details_photo" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/person_details_name"
            android:text="@string/person_details_name" />

        <EditText
            android:id="@+id/person_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="30"
            android:nextFocusUp="@id/person_details_cpf" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/person_details_cpf"
            android:text="@string/person_details_cpf" />

        <EditText
            android:id="@+id/person_details_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="14"
            android:nextFocusUp="@id/person_details_birthDate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/person_details_birthDate"
            android:text="@string/person_details_birthDate" />

        <EditText
            android:id="@+id/person_details_birthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="date"
            android:maxLength="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/addresses"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
