<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/address_fragment_margin"
    android:layout_marginBottom="20dp"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="@dimen/address_fragment_padding"
    tools:context=".ui.address.AddressFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/txt_address_zipCode"
        android:text="@string/address"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/txt_address_zipCode"
        android:text="@string/address_zipcode" />

    <EditText
        android:id="@+id/txt_address_zipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9" />

    <TextView
        android:id="@+id/txt_address_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_address_number_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/txt_address_number"
        android:text="@string/address_number"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_address_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="5"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/btn_address_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_add_remove"
            android:src="@drawable/ic_add_red"
            android:tint="@color/colorPrimaryDark"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>